@@ -140,8 +140,10 @@ enum StyleIdx {
       ST_akkoladeDistance,
       ST_systemDistance,
       ST_lyricsDistance,
+      ST_figuredBassDistance,
       ST_lyricsMinBottomDistance,
       ST_lyricsLineHeight,
+      ST_figuredBassLineHeight,
       ST_systemFrameDistance,
       ST_frameSystemDistance,
       ST_minMeasureWidth,
