@@ -1,4 +1,6 @@
 31.oct (ws)
+      - first "figured bass" support (shift+l); works similar as lyrics
+      - reduce flicker when updating navigator
       - fix #3798: Grace notes were created with stem direction "UP", should be "AUTO"
 30.oct (ws)
       - fix #9307: Nested tuplets causes crash
